著者情報変更

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ HasCJKLanguage = true
 enableRobotsTXT = true
 
 # ブログのタイトル
-title = "hiroki iida's notes"
+title = "hiroki iida's note"
 
 theme = "mainroad"
 paginate = 20
@@ -20,7 +20,7 @@ paginate = 20
 
 [Params]
     customCSS = ["css/custom.css"]
-    copyright = "Author"
+    copyright = "Hiroki Iida"
     readmore = true
     authorbox = true
     post_meta = ["date", "categories"]
